# PeelyBot-beta-

./: .replit  README.md  auths.json  config.json  fortnitpy_old.py  info.json  keep_alive.py  main.py  pyproject.toml  requirements.txt  settings_for_bot.json
bot/: loginstuff.json
stuff/: PeelyBot.py
