[tool.poetry]
name = "PeelyBot (beta)"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7.3"
FortniteAPIAsync = "^0.1.6"
sanic = "^20.12.2"
crayons = "^0.4.0"
BenBotAsync = "^2.6.0"
fortnitepy = "^3.4.0"
aioconsole = "^0.3.1"
Flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
